assets/stylesheets/scss/_pard.erb.scss
/* ... */
.makeCallBtn{
  /* background: #333333;
  @include border-radius($element-border-radius);
  padding: .3rem .8rem;
  color: white;
  font-weight: bold;
  vertical-align: middle;
  left: 0rem;
  top: .8rem;
  position: absolute; */
  left: 0rem;
  top: 1.15rem;
  position: absolute;
  display: inline-block;
  /* color:  white; */
}

a.makeCallBtn:hover{
  /* color: #212121; */
}

.dropdownHeaderMenu{
  margin: 0;
  width: 100%;
  li{
    width: 100%;
  }
  .separator{
    width: 95%;
    border-bottom: 1px solid $grey-1;
    margin: 0 auto;
  }
  .circleProfile-MenuHeader{
    @include border-radius(50%);
    width: .6rem;
    height: .6rem;
    margin-right: .5rem;
    display: inline-block;
    vertical-align: middle;
  }
}


/* --------------
login
-------------- */

@media only screen and #{breakpoint(small down)} { 
  .block-for-medium {
    display: block;
    width: 100%;
  }
  .login-bar, .user-bar{
    width: 100%;
    background: $content-background;
  }
  .menu-icon-header{
    margin-left:0.5rem;
  }
}


.top-bar-right .input-login{
  float: right; 
} 

.input-login {
 @include breakpoint(small down){
    display: block;
    padding-top: 0.5rem;
    .input-login-field {
      margin-bottom: 0.1rem;
    }
  }
  @include breakpoint(medium){
    .input-login-field, .input-loginEvent-field {
      display:inline-block;
      margin-right:0.4rem;
    }
  }
  @include breakpoint(large){
    margin-right:-0.75rem;
  }  
  .input-login-field{
    height: auto;
    font-size: $smallSize;
    width: 180px;
    padding: 0.3rem
  }
  .input-loginEvent-field{
    height: auto;
    font-size: $almostNormalSize;
    width: 14rem;
    padding: 0.3rem
  }
}

.dropdown.menu:not(.vertical) .is-dropdown-submenu.first-sub {
    top: 100%;
    left: auto;
    right: 0;
    z-index: 10;
}

.space-column-header .dropdown.menu:not(.vertical) .is-dropdown-submenu.first-sub {
    top: 100%;
    left: auto;
    right: 0.3rem;
    z-index: 10;
}



.rememberMe-ckb input{
  width:auto;
  margin-right:0;
  margin-top: 0.2rem;
}

.rememberMe-ckb{
  @include breakpoint(small down){
    float: right;
  }
}

.passwdRecovery{
  @include breakpoint(small down){
    display: block;
    margin-top: 0.2rem;
    white-space: nowrap;
  }
}

.rememberMe-ckb {
  @include breakpoint(medium){
    width: 10rem;
    display: block;
    margin-left: 0.1rem;
  }
}

.passwdRecovery, .rememberMe-ckb label{
   font-size: $smallSize;
}

.passwdRecovery{
  @include breakpoint(medium){
    float: right;
    margin-top: -1.3rem;
    margin-right: 5rem;
  } 
}

.passwdRecovery-eventLogin{
  font-size: $smallSize;
  @include breakpoint(medium){
    float: right;
    margin-top: -0.8rem;
    margin-right: 13rem;
  } 
  @include breakpoint(small down){
    display: block;
    margin-top: 0.2rem;
    white-space: nowrap;
  }
}



/* --------------
inside header
---------------
 */

.right-user-header-content{
  display: inline-block;
  position: absolute;
  @include breakpoint(large){
    margin-right: -1.5rem;
  }
  right:0;
}

.left-user-header-content{
  left:0;
  display: inline-block;
  position: absolute;
  @include breakpoint(large){
    margin-left:-0.5rem;
  }
  cursor: pointer;
  @include breakpoint(small down){
    margin-left: 0.5rem;
  }

}

.top-header-content{
  display: block;
  width: 100%;
  @include breakpoint(medium){
    min-height: 3.5rem;
  }
  @include breakpoint(small down){
    min-height: 2.3rem;
  }
}

.settings-icon-dropdown-menu{
  color: black;
  .material-icons{
    font-size: 2.1rem;
    margin-right: -0.6rem;
  }
  padding:0;
}

.settings-icon-dropdown-menu:hover{
  color: rgba(0,0,0,0.8);
}

.black{
  .settings-icon-dropdown-menu{
    color: white;
  }
  .settings-icon-dropdown-menu:hover{
    color: $grey-2;
  }
}



.rightContent-insideNavMenu{
  position: absolute;
  right: 0;
  top: .7rem;
  .rightMenu-navHeader{
    margin: 0;
    li{
      display: inline-block;
    }
  }
  .initText{
    text-align: center;
    margin-right: .2rem;
    padding-right: .8rem;
    border-right: 1px solid $grey-1;
    vertical-align: 0.7rem;
    height: 1.2rem;
    a{
      color: black;
    }
  }
  .initText:hover{
    a{
      color: rgba(0,0,0,.8);
    }
  }
}

.black .initText {
  border-color: $grey-4;
  a{
  color: white;
  }
}

.black .initText:hover{
 a{
    color: $grey-2
  }
}

/*==============================================
MAIN
===============================================*/

@media only screen and #{breakpoint(medium)} {

.outsider-main{
  margin-top: 3rem;
  .section-content{
    margin-bottom: $pard-grid-spacing;
  }
}

}

.inside-main{
  margin-top: -.7rem;
}

/*==============================================
FOOTER
===============================================*/

.footer-bar{
  width: 100%;
  background: $content-background;
  z-index: 1;
  position:relative;
  background: black;
  color: $grey-2;
  bottom:0;
  font-size: $smallSize;
  @include breakpoint(medium) {  
    height:1.8rem;
  }
  box-shadow: 0 0 2px black;
  @include breakpoint(small down) {  
    padding: 0.2rem 0.5rem;
  }
}

.pard-container-relative{
  position:relative;
  width: 100%;
  height: 1.8rem;
  padding-top:0.3rem;
  @include breakpoint(small down){
    min-height: 3rem;
  }
}



button.footer-text-link {
  color: white;
  cursor: pointer;
}


button.footer-text-link:hover{
  color: white;
  text-decoration: underline;
}

.rightFooter-menu{
  font-size: $smallSize;
  margin: 0;
  display: inline-block;
  li{
    display: inline-block;
    margin-left: 2rem;
    color: $blue-pard;
    cursor: pointer;
  }
  li:hover{
    color: rgb(44, 106, 204);
  }
}

.leftFooter-menu{
  margin: 0;
  li{
    display: inline-block;
    margin-right: 2rem;
  }
}

@media only screen and #{breakpoint(medium)} {

.footer-outsider{
  position:fixed;
}

}
/* ... */

